hack/lib/mesh_v3_resources/07_peer_authentication.yaml
apiVersion: "security.istio.io/v1"
kind: "PeerAuthentication"
metadata:
  name: mesh-mtls
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
