hack/lib/mesh_v3_resources/07b_autoscaler_peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: autoscaler-permissive
  namespace: knative-serving
spec:
  selector:
    matchLabels:
      app: autoscaler
  mtls:
    mode: PERMISSIVE
