hack/lib/mesh_v3_resources/kafka-service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: kafka-cluster
spec:
  hosts:
    - my-cluster-kafka-bootstrap.kafka
  exportTo:
    - "."
  ports:
    - number: 9092
      name: tcp-plain
      protocol: TCP
    - number: 9093
      name: tls
      protocol: TCP
    - number: 9094
      name: saslssl
      protocol: TCP
    - number: 9095
      name: saslplain
      protocol: TCP
    - number: 9096
      name: sslnoauth
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: NONE
